--- a/Lended/Base.lproj/LaunchScreen.storyboard
+++ b/Lended/Base.lproj/LaunchScreen.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GeorgiaBold.ttf">
+            <string>Georgia-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -29,7 +34,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lended" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8fa-KA-uBq">
-                                <rect key="frame" x="46" y="410" width="283" height="63"/>
+                                <rect key="frame" x="28.5" y="410" width="318.5" height="63"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="63" id="jra-qx-TKb"/>
                                 </constraints>
@@ -41,13 +46,13 @@
                         <color key="backgroundColor" red="0.41176470588235292" green="0.74901960784313726" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="EcG-Eg-fIH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="75" id="0Tv-9S-6UL"/>
-                            <constraint firstItem="8fa-KA-uBq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="46" id="I2c-15-L7T"/>
+                            <constraint firstItem="8fa-KA-uBq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="I2c-15-L7T"/>
                             <constraint firstAttribute="trailing" secondItem="EcG-Eg-fIH" secondAttribute="trailing" constant="75" id="Noj-il-Z5N"/>
                             <constraint firstItem="EcG-Eg-fIH" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="150" id="ObQ-LX-JaQ"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="8fa-KA-uBq" secondAttribute="bottom" constant="194" id="cUi-MB-qoL"/>
                             <constraint firstItem="8fa-KA-uBq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hAs-RG-bMZ"/>
                             <constraint firstItem="8fa-KA-uBq" firstAttribute="top" secondItem="EcG-Eg-fIH" secondAttribute="bottom" constant="15" id="iJS-nj-0rh"/>
-                            <constraint firstAttribute="trailing" secondItem="8fa-KA-uBq" secondAttribute="trailing" constant="46" id="m4S-SE-1e5"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8fa-KA-uBq" secondAttribute="trailing" id="m4S-SE-1e5"/>
                         </constraints>
                     </view>
                 </viewController>
